# triton-metal

./: .gitignore  CMakeLists.txt  LICENSE.metal  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.py
.claude/: settings.json
.claude/agents/: code-review.md  context-gathering.md  context-refinement.md  logging.md  service-documentation.md
.serena/: project.yml
docs/: metal-backend-testing.md  metal-backend.md
include/triton/Dialect/: CMakeLists.txt
include/triton/Dialect/TritonMetal/: CMakeLists.txt
include/triton/Dialect/TritonMetal/IR/: CMakeLists.txt  Dialect.h  Dialect.td  TritonMetalDialect.cpp.inc
include/triton/Dialect/TritonMetal/Transforms/: CMakeLists.txt  Passes.h  Passes.h.inc  Passes.td
lib/Dialect/Triton/IR/: Ops.cpp
lib/Dialect/TritonMetal/IR/: CMakeLists.txt  Dialect.cpp
lib/Dialect/TritonMetal/Transforms/: CMakeLists.txt  Passes.cpp
python/test/unit/cuda/: test_gemm_fusion.py
python/triton/backends/metal/: __init__.py  compiler.py  driver.py
python/triton/backends/metal/include/metal/: metal_api.h
python/triton/backends/metal/lib/: metal_api.cpp
python/triton_metal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sessions/: sessions-config.json
sessions/hooks/: sessions_enforce.py
sessions/knowledge/claude-code/: hooks-reference.md  project-directory-references.md
sessions/tasks/: h-fix-build-and-audit.md
sessions/tasks/indexes/: build-system.md
unittest/: CMakeLists.txt
unittest/Dialect/: CMakeLists.txt
unittest/Dialect/TritonMetal/: CMakeLists.txt  HardwareDetectionTest.cpp  MLXIntegrationTest.cpp  README.md
unittest/Dialect/TritonMetal/IR/: CMakeLists.txt  DialectTest.cpp
unittest/Dialect/TritonMetal/Transforms/: CMakeLists.txt  M3OptimizationsTest.cpp  MemoryOptimizerTest.cpp  TransformsTest.cpp
unittest/Metal/: CMakeLists.txt  HardwareDetectionTest.cpp  M3OptimizationsTest.cpp  MLXIntegrationTest.cpp  MetalBackendTest.cpp  MetalMemoryManagerTest.cpp  OperationFusionTest.cpp  README.md  TensorCoreTest.cpp
